--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join Qatar Education Expo 2026, the leading international education fair and university expo in the GCC. A premier gulf education exhibition to explore study abroad options in the Middle East, meet top universities, and discover your future. Register free for this top student recruitment fair.">
@@ -11,16 +20,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-<script type="importmap">
-{
-  "imports": {
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "glob": "https://aistudiocdn.com/glob@^11.0.3",
-    "url": "https://aistudiocdn.com/url@^0.11.4"
-  }
-}
-</script>
     <script type="application/ld+json">
     [
       {
@@ -42,7 +41,7 @@
           }
         },
         "image": [
-          "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png"
+          "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp"
          ],
         "description": "The premier education expo in the MENA region, connecting universities, EdTech innovators, and industry leaders with over 4,000 students, parents, and professionals.",
         "organizer": {
@@ -64,7 +63,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -80,12 +79,29 @@
     ]
     </script>
 <link rel="stylesheet" href="/index.css">
+<script type="importmap">
+{
+  "imports": {
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.2.1",
+    "glob": "https://aistudiocdn.com/glob@^11.0.3",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
+  }
+}
+</script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1z7soldc8");
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -96,7 +112,7 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
@@ -105,7 +121,7 @@
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
@@ -180,7 +196,7 @@
                     </div>
                 </div>
             </div>
-            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot for the leading education expo in the GCC." class="hero-mascot">
+            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.webp" alt="Qatar Education Expo's owl mascot for the leading education expo in the GCC." class="hero-mascot">
         </section>
         
         <!-- Scrolling Banner -->
@@ -239,7 +255,7 @@
         <!-- EXHIBITOR BENEFITS SECTION (NEW) -->
         <section id="exhibitor-benefits" class="bg-surface section-angled-top">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076630/owl-vr_mev0of.png" alt="Qatar Education Expo's owl mascot wearing VR goggles to represent exhibitor benefits and technology." class="benefits-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076630/owl-vr_mev0of.webp" alt="Qatar Education Expo's owl mascot wearing VR goggles to represent exhibitor benefits and technology." class="benefits-mascot">
                  <h2>Exhibitor Benefits</h2>
                  <p class="subtitle">Maximize your impact and achieve your goals at Qatar Education Expo 2026.</p>
                  <div class="benefits-grid">
@@ -272,7 +288,7 @@
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
                 <p class="subtitle">If you provide solutions for the education ecosystem, Qatar Education Expo is your platform.</p>
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot pointing to the list of who should exhibit at the event." class="exhibit-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing to the list of who should exhibit at the event." class="exhibit-mascot">
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
                         <i class="fas fa-university"></i>
@@ -335,7 +351,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-card">
                         <a href="https://www.linkedin.com/in/elani-mcdonald-59b22a29/" class="speaker-linkedin" aria-label="Elani McDonald's LinkedIn profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761476344/Untitled_design_-_2025-10-26T162827.845_xws5xw.png" alt="Headshot of Elani McDonald" class="speaker-photo">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761476344/Untitled_design_-_2025-10-26T162827.845_xws5xw.webp" alt="Headshot of Elani McDonald" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Elani McDonald</h4>
                             <p class="speaker-title">Secondary Principal</p>
@@ -346,7 +362,7 @@
                     <!-- Speaker 2 -->
                     <div class="speaker-card">
                         <a href="https://www.linkedin.com/in/amer-bazerbachi/" class="speaker-linkedin" aria-label="Amer Bazerbachi's LinkedIn profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761477009/Untitled_design_-_2025-10-26T163955.545_ufmkhs.png" alt="Headshot of Amer Bazerbachi" class="speaker-photo">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761477009/Untitled_design_-_2025-10-26T163955.545_ufmkhs.webp" alt="Headshot of Amer Bazerbachi" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Amer Bazerbachi</h4>
                             <p class="speaker-title">Partner</p>
@@ -379,7 +395,7 @@
                     <!-- Speaker 5 -->
                     <div class="speaker-card">
                         <a href="https://www.linkedin.com/in/dr-mirela-dana-palimariu-phd-86132b4a/" class="speaker-linkedin" aria-label="Dr. Mirela-Dana Palimariu's LinkedIn profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761476343/Untitled_design_-_2025-10-26T162847.853_geyb8t.png" alt="Headshot of Dr. Mirela-Dana Palimariu" class="speaker-photo">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761476343/Untitled_design_-_2025-10-26T162847.853_geyb8t.webp" alt="Headshot of Dr. Mirela-Dana Palimariu" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Dr. Mirela-Dana Palimariu</h4>
                             <p class="speaker-title">Founding Principal</p>
@@ -412,7 +428,7 @@
                     <!-- Speaker 8 -->
                     <div class="speaker-card">
                         <a href="#" class="speaker-linkedin" aria-label="Prof. Robert Martinez's LinkedIn profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761482787/Untitled_design_-_2025-10-26T181620.790_shapre.png" alt="Headshot of Prof. Robert Martinez" class="speaker-photo">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761482787/Untitled_design_-_2025-10-26T181620.790_shapre.webp" alt="Headshot of Prof. Robert Martinez" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Prof. Robert Martinez</h4>
                             <p class="speaker-title">Education Technology Pioneer</p>
@@ -438,7 +454,7 @@
         <!-- 7. TESTIMONIALS -->
         <section id="testimonials" class="bg-surface">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-tech.2_qxwqmx.png" alt="Qatar Education Expo's owl mascot peeking over the testimonials section." class="testimonials-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot peeking over the testimonials section." class="testimonials-mascot">
                 <h2>Why Leaders are Backing Qatar Education Expo 2026</h2>
                 <p class="subtitle">Hear from industry experts on why this event is a crucial new platform for the MENA region.</p>
                 <div class="testimonials-grid">
@@ -446,7 +462,7 @@
                         <i class="fas fa-quote-left"></i>
                         <blockquote>The quality of student interactions and networking was exceptional. We exceeded our recruitment targets in just two days. A must-attend event.</blockquote>
                         <div class="testimonial-author">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761483428/Untitled_design_-_2025-10-26T182537.107_wd59hw.png" alt="Photo of Dr. Anya Sharma.">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761483428/Untitled_design_-_2025-10-26T182537.107_wd59hw.webp" alt="Photo of Dr. Anya Sharma.">
                             <div>
                                 <strong>Dr. Anya Sharma</strong>
                                 <span>Director of International Admissions, Hope University</span>
@@ -457,7 +473,7 @@
                         <i class="fas fa-quote-left"></i>
                         <blockquote>Qatar Education Expo was the perfect platform to launch our new EdTech solution. Access to school principals and government officials was unparalleled. The ROI was immediate.</blockquote>
                         <div class="testimonial-author">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761480348/Untitled_design_-_2025-10-26T173334.694_svfkm0.png" alt="Photo of Fatima Al-Khater.">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761480348/Untitled_design_-_2025-10-26T173334.694_svfkm0.webp" alt="Photo of Fatima Al-Khater.">
                             <div>
                                 <strong>Fatima Al-Khater</strong>
                                 <span>CEO, EduVerse Technologies</span>
@@ -468,7 +484,7 @@
                         <i class="fas fa-quote-left"></i>
                         <blockquote>As a Platinum Sponsor, the brand visibility was phenomenal. The team connected us with key decision-makers effortlessly, ensuring our message was front and center.</blockquote>
                         <div class="testimonial-author">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761482517/Untitled_design_-_2025-10-26T180850.122_oexvwa.png" alt="Photo of Johnathan Chen.">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761482517/Untitled_design_-_2025-10-26T180850.122_oexvwa.webp" alt="Photo of Johnathan Chen.">
                             <div>
                                 <strong>Johnathan Chen</strong>
                                 <span>MENA Partnerships Lead, Global Learning Inc.</span>
@@ -509,7 +525,7 @@
                     <!-- Card 3: Sponsor (Premium) -->
                     <div class="way-card way-card--sponsor">
                         <div class="way-card-badge">Featured</div>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761388536/Gemini_Generated_Image_kj51j7kj51j7kj51_w44mge.png" alt="Business professionals shaking hands, symbolizing sponsorship.">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761388536/Gemini_Generated_Image_kj51j7kj51j7kj51_w44mge.webp" alt="Business professionals shaking hands, symbolizing sponsorship.">
                         <div class="way-card-content">
                             <h3>Sponsor</h3>
                             <p>Lead the Change<br><strong>Maximize MENA Visibility</strong></p>
@@ -530,7 +546,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -652,6 +668,5 @@
     
     <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
     <script type="module" src="index.tsx"></script>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
