--- a/student-registration.html
+++ b/student-registration.html
@@ -2,10 +2,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Register for free entry to Qatar's biggest education fair and university expo. Meet international universities and plan your higher education journey.">
-    <title>Student Registration | EduExpo Qatar 2026 Education Fair</title>
+    <title>Student Registration | Qatar Education Expo 2026 Education Fair</title>
     <link rel="canonical" href="https://eduexpoqatar.com/student-registration.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/student-registration.html" />
     <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/student-registration.html" />
@@ -28,9 +37,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "EduExpo Qatar 2026",
+        "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -64,12 +73,19 @@
       }
     ]
     </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1z7soldc8");
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="EduExpo Qatar 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -80,18 +96,20 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
+                            <li><a href="qatar-expo-hackathon.html">Hackathon 2026</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
@@ -124,7 +142,7 @@
         <section class="page-header">
             <div class="container">
                 <h1>Student Registration</h1>
-                <p>Secure your free spot at EduExpo Qatar 2026 and connect with your future.</p>
+                <p>Secure your free spot at Qatar Education Expo 2026 and connect with your future.</p>
             </div>
         </section>
         
@@ -136,7 +154,7 @@
                 <div id="student-form-success" style="display: none; text-align: center; background: var(--white); padding: 2.5rem; border-radius: 10px; border: 1px solid var(--border-color); box-shadow: var(--shadow);">
                      <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
                      <h3>Registration Confirmed!</h3>
-                     <p>Thank you for registering for EduExpo Qatar 2026. Your free pass has been sent to your email address. See you at the event!</p>
+                     <p>Thank you for registering for Qatar Education Expo 2026. Your free pass has been sent to your email address. See you at the event!</p>
                      <a href="index.html" class="btn btn-primary" style="margin-top: 1rem;">Back to Home</a>
                 </div>
 
@@ -241,7 +259,7 @@
 
                     <div class="form-group form-group-consent">
                         <input type="checkbox" id="form-student-consent" name="consent" required>
-                        <label for="form-student-consent">I agree to the EduExpo Qatar terms & conditions and privacy policy, and I consent to receive communications about this and future events. *</label>
+                        <label for="form-student-consent">I agree to the Qatar Education Expo terms & conditions and privacy policy, and I consent to receive communications about this and future events. *</label>
                         <div class="error-message"></div>
                     </div>
                     
@@ -249,14 +267,14 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="EduExpo Qatar's owl mascot pointing to the student registration form." class="student-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot pointing to the student registration form." class="student-reg-mascot">
     </main>
 
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="EduExpo Qatar 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -301,10 +319,67 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 EduExpo Qatar. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
+
+    <!-- Exit Intent Modal -->
+    <div id="exit-intent-modal" class="modal-overlay">
+        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
+            <button class="modal-close-btn" aria-label="Close">&times;</button>
+            <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
+            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
+            <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
+        </div>
+    </div>
+
+    <!-- Deck Request Modal -->
+    <div id="deck-request-modal" class="modal-overlay">
+        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
+            <button class="modal-close-btn" aria-label="Close">&times;</button>
+            <div id="deck-form-container">
+                <h3 id="deck-modal-title">Get The Official Deck</h3>
+                <p>Please provide your details to receive the Exhibitor & Sponsorship Deck instantly.</p>
+                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
+                    <input type="hidden" name="form_source" value="Deck Request Popup">
+                    <div class="form-group">
+                        <label for="deck-form-name">Full Name *</label>
+                        <input type="text" id="deck-form-name" name="name" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="deck-form-email">Work Email *</label>
+                        <input type="email" id="deck-form-email" name="email" required>
+                        <div class="error-message"></div>
+                    </div>
+                     <div class="form-group">
+                        <label for="deck-form-phone">Mobile Number *</label>
+                        <input type="tel" id="deck-form-phone" name="phone" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="deck-form-designation">Designation *</label>
+                            <input type="text" id="deck-form-designation" name="designation" required>
+                            <div class="error-message"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="deck-form-organization">Organization *</label>
+                            <input type="text" id="deck-form-organization" name="organization" required>
+                            <div class="error-message"></div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
+                </form>
+            </div>
+            <div id="deck-form-success" style="display: none; text-align: center;">
+                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
+                <h3>Thank You!</h3>
+                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
+            </div>
+        </div>
+    </div>
 
     <!-- Mobile Sticky Bar -->
     <div id="mobile-sticky-bar">
