--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join Qatar Education Expo 2026, the leading international education fair and university expo in the GCC. A premier gulf education exhibition to explore study abroad options in the Middle East, meet top universities, and discover your future. Register free for this top student recruitment fair.">
-    <title>Qatar Education Expo 2026 | Global Education Expo & University Fair in GCC</title>
+    <title>Join the Region's Most Impactful Education Expo</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
