--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </video>
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h1>The Leading International Education Expo & University Fair in the GCC</h1>
+                    <h1>TJoin the Region's Most Impactful Education Expo</h1>
                     <p>
                         <strong>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
                         <br>
