--- a/why-exhibit.html
+++ b/why-exhibit.html
@@ -2,10 +2,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Exhibit at the leading student recruitment fair and education exhibition in Doha. Connect with thousands of students and parents from across the Gulf region. Book your booth today.">
-    <title>Exhibit at Qatar's Top Student Recruitment Fair | EduExpo Qatar 2026</title>
+    <title>Exhibit at Qatar's Top Student Recruitment Fair | Qatar Education Expo 2026</title>
     <link rel="canonical" href="https://eduexpoqatar.com/why-exhibit.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/why-exhibit.html" />
     <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/why-exhibit.html" />
@@ -28,9 +37,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "EduExpo Qatar 2026",
+        "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -64,12 +73,19 @@
       }
     ]
     </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1z7soldc8");
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="EduExpo Qatar 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -79,16 +95,17 @@
                  <ul>
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
-                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                    <li class="has-dropdown">
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
@@ -150,7 +167,7 @@
                         <p>Shape the education agenda by hosting workshops, joining panel discussions, and presenting your vision to a captive audience.</p>
                     </div>
                      <div class="benefit-card partnership-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.png" alt="EduExpo Qatar's owl mascot flying above the strategic partnerships card." class="card-top-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.webp" alt="Qatar Education Expo's owl mascot flying above the strategic partnerships card." class="card-top-mascot">
                         <i class="fas fa-handshake"></i>
                         <h3>Strategic Partnerships</h3>
                         <p>Network with K-12 principals, university deans, government officials, and investors to forge powerful new alliances.</p>
@@ -165,7 +182,7 @@
         <section id="who-should-exhibit" class="bg-surface">
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
-                <p class="subtitle">If you provide solutions for the education ecosystem, EduExpo Qatar is your platform.</p>
+                <p class="subtitle">If you provide solutions for the education ecosystem, Qatar Education Expo is your platform.</p>
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
                         <i class="fas fa-university"></i>
@@ -192,7 +209,7 @@
                         <p>Education Consultants</p>
                     </div>
                 </div>
-                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762095342/Untitled_design_-_2025-11-02T202158.795_mpfkzr.png" alt="EduExpo Qatar's owl mascot peeking from the side of the 'Who Should Exhibit' section." class="exhibit-footer-mascot">
+                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762095342/Untitled_design_-_2025-11-02T202158.795_mpfkzr.webp" alt="Qatar Education Expo's owl mascot peeking from the side of the 'Who Should Exhibit' section." class="exhibit-footer-mascot">
             </div>
         </section>
     </main>
@@ -201,7 +218,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="EduExpo Qatar 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -246,7 +263,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 EduExpo Qatar. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
