--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Qatar's Premier Education Expo & International University Fair</h1>
+                <h1> $100 Billion Education Market on the Rise</h1>
                 <p>Position your institution at the forefront of a rapidly growing, high-demand region.</p>
             </div>
         </section>
