--- a/why-attend.html
+++ b/why-attend.html
@@ -141,7 +141,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Why Attend Qatar's Leading University Fair?</h1>
+                <h1>Why Attend Qatar's Leading University Expo?</h1>
                 <p>Discover your future, connect with leaders, and explore the latest in education.</p>
             </div>
         </section>
