--- a/why-attend.html
+++ b/why-attend.html
@@ -11,6 +11,13 @@
 
   gtag('config', 'G-7VMH5W3FET');
 </script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "u1z7soldc8");
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Attend the top university fair and education exhibition in Qatar. Meet universities, explore study abroad options, and get career guidance at this unmissable admission fair.">
@@ -73,13 +80,6 @@
       }
     ]
     </script>
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "u1z7soldc8");
-    </script>
 </head>
 <body>
 
@@ -141,7 +141,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Why Attend Qatar's Leading University Expo?</h1>
+                <h1>Why Attend Qatar's Leading University Fair?</h1>
                 <p>Discover your future, connect with leaders, and explore the latest in education.</p>
             </div>
         </section>
