--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join Qatar Education Expo 2026, the leading international education fair and university expo in the GCC. A premier gulf education exhibition to explore study abroad options in the Middle East, meet top universities, and discover your future. Register free for this top student recruitment fair.">
-    <title>Join the Region's Most Impactful Education Expo</title>
+    <title>Qatar Education Expo 2026 | Global Education Expo & University Fair in GCC</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -163,11 +163,11 @@
             </video>
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h1>Join the Region's Most Impactful Education Expo</h1>
+                    <h1>The Leading International Education Expo & University Fair in the GCC</h1>
                     <p>
-                        <strong>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
+                        <strong>April 19–20, 2026 | Sheraton Grand Doha</strong>
                         <br>
-                        Organized by Student Diwan, Qatar's leading EdTech platform
+                        Connect with top international universities at the premier gulf education exhibition. Explore study abroad opportunities (study in UK, study in Canada, and more) and attend the biggest education show in the Middle East.
                     </p>
                     <div class="cta-group">
                         <a href="booth-registration.html" id="hero-cta-booth" class="btn btn-primary">Reserve My Booth</a>
@@ -212,8 +212,10 @@
              <div class="container">
                 <h2>Our Supporting Partners</h2>
                 <p class="subtitle">We are proud to collaborate with leaders in education and technology to make Qatar Education Expo 2026 a landmark event.</p>
-                <div class="logo-grid" id="home-partners-grid">
-                    <!-- Partner logos will be injected here by JS -->
+                <div class="logo-scroller">
+                    <div class="logo-scroller__inner" id="home-partners-grid">
+                        <!-- Partner logos will be injected here by JS -->
+                    </div>
                 </div>
             </div>
         </section>
