--- a/qatar-expo-hackathon.html
+++ b/qatar-expo-hackathon.html
@@ -135,7 +135,7 @@
                 <i class="fas fa-code" style="font-size: 3rem; background: var(--gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem;"></i>
                 <h2>Join a 24-Hour Innovation Hackathon</h2>
                 <p class="subtitle" style="font-size: 1.1rem;">In collaboration with lovable, the Qatar Education Leadership Expo 2026 proudly presents the Vibe Coding Challenge a 24-hour innovation hackathon designed to inspire the next generation of creative problem solvers. This challenge invites students across Qatar to reimagine the university experience of tomorrow using the power of AI, design thinking, and digital tools</p>
-                <a href="student-registration.html" class="btn btn-primary">contact.html</a>
+                <a href="contact.html" class="btn btn-primary">Register to Participate</a>
             </div>
         </section>
 
