--- a/index.html
+++ b/index.html
@@ -212,10 +212,8 @@
              <div class="container">
                 <h2>Our Supporting Partners</h2>
                 <p class="subtitle">We are proud to collaborate with leaders in education and technology to make Qatar Education Expo 2026 a landmark event.</p>
-                <div class="logo-scroller">
-                    <div class="logo-scroller__inner" id="home-partners-grid">
-                        <!-- Partner logos will be injected here by JS -->
-                    </div>
+                <div class="logo-grid" id="home-partners-grid">
+                    <!-- Partner logos will be injected here by JS -->
                 </div>
             </div>
         </section>
