--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             </video>
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h1>The Leading International Education Expo & University Fair in the GCC</h1>
+                    <h1>Join the Region's Most Impactful Education Expo</h1>
                     <p>
-                        <strong>April 19–20, 2026 | Sheraton Grand Doha</strong>
+                        <strong>>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
                         <br>
-                        Connect with top international universities at the premier gulf education exhibition. Explore study abroad opportunities (study in UK, study in Canada, and more) and attend the biggest education show in the Middle East.
+                         Organized by Student Diwan, Qatar's leading EdTech platform
                     </p>
                     <div class="cta-group">
                         <a href="booth-registration.html" id="hero-cta-booth" class="btn btn-primary">Reserve My Booth</a>
