--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <section id="testimonials" class="bg-surface">
             <div class="container">
                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot peeking over the testimonials section." class="testimonials-mascot">
-                <h2>Why Leaders are Backing Qatar Education Expo 2026</h2>
+                <h2>Why Leaders are Backing Qatar Expo</h2>
                 <p class="subtitle">Hear from industry experts on why this event is a crucial new platform for the MENA region.</p>
                 <div class="testimonials-grid">
                     <div class="testimonial-card">
