--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
         <section id="who-should-exhibit" class="bg-surface">
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
-                <p class="subtitle">If you provide solutions for the education ecosystem, Qatar Education Expo is your platform.</p>
+                <p class="subtitle">If you provide solutions for the education ecosystem,
+                  
+                  Qatar Education Expo is your platform.</p>
                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing to the list of who should exhibit at the event." class="exhibit-mascot">
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
