--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="hero-text">
                     <h1>Join the Region's Most Impactful Education Expo</h1>
                     <p>
-                        <strong>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
+                        <strong>>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
                         <br>
                          Organized by Student Diwan, Qatar's leading EdTech platform
                     </p>
@@ -289,9 +289,7 @@
         <section id="who-should-exhibit" class="bg-surface">
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
-                <p class="subtitle">If you provide solutions for the education ecosystem,
-                  
-                  Qatar Education Expo is your platform.</p>
+                <p class="subtitle">If you provide solutions for the education ecosystem, Qatar<br>Education Expo is your platform.</p>
                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing to the list of who should exhibit at the event." class="exhibit-mascot">
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
@@ -459,7 +457,7 @@
         <section id="testimonials" class="bg-surface">
             <div class="container">
                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot peeking over the testimonials section." class="testimonials-mascot">
-                <h2>Why Leaders are Backing Qatar Expo</h2>
+                <h2>Why Leaders are Backing Qatar Education Expo 2026</h2>
                 <p class="subtitle">Hear from industry experts on why this event is a crucial new platform for the MENA region.</p>
                 <div class="testimonials-grid">
                     <div class="testimonial-card">
